@@ -7,6 +7,8 @@ jsoup changelog
    support for gzip responses, cookies, headers, data parameters, user-agent, referrer, etc.
   
  * Added Element.ownText() method, to get only the direct text of an element, not including the text of its children.
+ 
+ * Added support for selectors :containsOwn(text) and :matchesOwn(regex), to supplement Element.ownText().
 
  * Added support for non-pretty-printed HTML output, to more closely mirror the input HTML.
 
